Fix VirtualKeyboardTray border

We need to set a null border for VirtualKeyboardTray every time shelf
alignment changes. This was regressed in r410413 which simplified
VirtualKeyboardTray's View hierarchy.

BUG=635706
TEST=none

Review-Url: https://codereview.chromium.org/2221283002
Cr-Commit-Position: refs/heads/master@{#410736}

Former-commit-id: e174a0faee78a356b775b16a1444f52d1dd319e5